<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alarmmax_input_hint">Please enter a high temperature threshold...</string>
    <string name="alarmmax_input_message">Please enter a temperature threshold, an alert will be issued if exceeded!</string>
    <string name="alarmmax_input_title">Max Temperature</string>
    <string name="alarmmax_tip_message">High temperature warning!!!</string>
    <string name="alarmmin_input_hint">Please enter low temperature threshold...</string>
    <string name="alarmmin_input_message">Please enter a temperature threshold below which an alert will be issued!</string>
    <string name="alarmmin_input_title">Min Temperature</string>
    <string name="alarmmin_tip_message">Low temperature warning!!!</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">HT-105/203U Smart Thermal</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="capture_failed_1">Please turn on the device!</string>
    <string name="capture_failed_2">Capture failed!</string>
    <string name="capture_success">Successful capture!</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_to_restart">Click to try again</string>
    <string name="config_brightness">Brightness</string>
    <string name="config_contrast">Contrast</string>
    <string name="config_detail">Detail enhancement</string>
    <string name="config_distance">Distance</string>
    <string name="config_emissivity">Emissivity</string>
    <string name="config_image_control">Image control</string>
    <string name="config_input_brightness_message">Please select image brightness!</string>
    <string name="config_input_brightness_title">Image Brightness</string>
    <string name="config_input_contrast_message">Please select image contrast!</string>
    <string name="config_input_contrast_title">Image Contrast</string>
    <string name="config_input_detail_message">Please select a detail enhancement value!</string>
    <string name="config_input_detail_title">Detail Enhancement</string>
    <string name="config_input_distance_message">Please select distance!</string>
    <string name="config_input_distance_title">Distance</string>
    <string name="config_input_emissivity_message">Please select emissivity!</string>
    <string name="config_input_emissivity_title">Emissivity</string>
    <string name="config_input_noise_message">Please select an image noise reduction value!</string>
    <string name="config_input_noise_title">Noise Reduction</string>
    <string name="config_input_optical_message">Please select external optical temperature!</string>
    <string name="config_input_optical_title">Optical Temperature</string>
    <string name="config_input_reflection_message">Please select Reflection temperature!</string>
    <string name="config_input_reflection_title">Reflection Temperature</string>
    <string name="config_noise">Noise reduction</string>
    <string name="config_optical">Optical-T</string>
    <string name="config_range">Measuring range</string>
    <string name="config_range_large">Large range</string>
    <string name="config_range_small">Small range</string>
    <string name="config_reflection">Reflection-T</string>
    <string name="config_reset_dialog_message">Do configuration parameters need to be reset?</string>
    <string name="config_reset_dialog_title">Reset config</string>
    <string name="config_reset_title">RESET</string>
    <string name="config_reset_wait_message">Reseting...</string>
    <string name="config_tempunit">Temperature unit</string>
    <string name="config_tempunit_celsius">Celsius(℃)</string>
    <string name="config_tempunit_fahrenheit">Fahrenheit(℉)</string>
    <string name="config_thermal_control">Thermal control</string>
    <string name="device_open_disconnect">The device has been disconnected!</string>
    <string name="device_open_failed">Device opening failed, please try again!</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="gain_switch_failed_message">Switch failed, please try again！</string>
    <string name="gain_switch_success_message">Switch completed</string>
    <string name="gain_switch_wait_message">Switching...</string>
    <string name="gallery_deleta_deleting">Deleting...</string>
    <string name="gallery_delete_cancle">Cancel</string>
    <string name="gallery_delete_message">Do you want to delete the selected file?</string>
    <string name="gallery_delete_ok">Delete</string>
    <string name="gallery_delete_title">Delete Files</string>
    <string name="gallery_menu_delete_title">Delete</string>
    <string name="gallery_menu_deselect_title">Deselect</string>
    <string name="gallery_menu_failed_noselected">No file selected!</string>
    <string name="gallery_menu_failed_sharemax">Cannot exceed 9 files!</string>
    <string name="gallery_menu_searchagain_title">Search again</string>
    <string name="gallery_menu_selectall_title">Select All</string>
    <string name="gallery_menu_share_title">Share</string>
    <string name="gallery_share_picture_title">Share Pictures</string>
    <string name="gallery_share_video_title">Share Videos</string>
    <string name="gallery_title">Gallery</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0.0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0.0, 0.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0.0, 0.0, 0.0, 1.0)</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_24h_suffix">%1$s hours</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end</string>
    <string name="material_slider_range_start">Range start</string>
    <string name="picture_detailed_capturetime">Captured time:</string>
    <string name="picture_detailed_filename">File name:</string>
    <string name="picture_detailed_filesize">File size:</string>
    <string name="picture_detailed_resolution">Resolution:</string>
    <string name="picture_detailed_storage">Storage:</string>
    <string name="picture_nothing">Sorry, there\'s nothing here!</string>
    <string name="picture_title">Pictures</string>
    <string name="settings_alarm">Alarm</string>
    <string name="settings_alarmmax_text">Max</string>
    <string name="settings_alarmmin_text">Min</string>
    <string name="settings_alarmvalue_hint">Click to set</string>
    <string name="settings_camera">System Camera</string>
    <string name="settings_chinese">Chinese</string>
    <string name="settings_english">English</string>
    <string name="settings_language">Language</string>
    <string name="settings_russian">Russian</string>
    <string name="settings_watermark">Watermark</string>
</resources>