<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/popup_settings_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/settings_camera"
                android:background="@drawable/selector_popup_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_camera"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"/>
                <ImageView
                    android:id="@+id/settings_camera_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_public_switch_normal"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/settings_watermark"
                android:background="@drawable/selector_popup_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_watermark"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"/>
                <ImageView
                    android:id="@+id/settings_watermark_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_public_switch_normal"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:gravity="center_vertical"
                android:background="@drawable/selector_popup_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_alarm"/>
            <RelativeLayout
                android:id="@+id/settings_alarmmax"
                android:background="@drawable/selector_popup_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:id="@+id/settings_alarmmax_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/settings_alarmmax_text"/>
                <TextView
                    android:textColor="#000000"
                    android:gravity="center"
                    android:id="@+id/settings_alarmmax_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/settings_alarmvalue_hint"
                    android:layout_toLeftOf="@+id/settings_alarmmax_select"
                    android:layout_toRightOf="@+id/settings_alarmmax_text"/>
                <ImageView
                    android:id="@+id/settings_alarmmax_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_public_switch_normal"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/settings_alarmmin"
                android:background="@drawable/selector_popup_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:id="@+id/settings_alarmmin_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/settings_alarmmin_text"/>
                <TextView
                    android:textColor="#000000"
                    android:gravity="center"
                    android:id="@+id/settings_alarmmin_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/settings_alarmvalue_hint"
                    android:layout_toLeftOf="@+id/settings_alarmmin_select"
                    android:layout_toRightOf="@+id/settings_alarmmin_text"/>
                <ImageView
                    android:id="@+id/settings_alarmmin_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_public_switch_normal"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:gravity="center_vertical"
                android:background="@drawable/selector_popup_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_language"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/settings_chinese"
                android:background="@drawable/selector_popup_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/settings_chinese_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_public_select_normal"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settings_chinese"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/settings_english"
                android:background="@drawable/selector_popup_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/settings_english_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_public_select_normal"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settings_english"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/settings_russian"
                android:background="@drawable/selector_popup_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/settings_russian_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_public_select_normal"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settings_russian"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
