<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/titlebar_color"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="#dddddd"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/titlebar_layout"
            android:background="@color/titlebar_color"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/titlebar_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_alignParentLeft="true">
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/selector_back_image"
                    android:layout_weight="2"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>
            <TextView
                android:textColor="#ffffff"
                android:id="@+id/titlebar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picture_title"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/titlebar_menu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true">
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/selector_menu_image"
                    android:layout_weight="2"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>
        </RelativeLayout>
        <GridView
            android:id="@+id/picture_gridview"
            android:padding="@dimen/gallery_gridview_padding"
            android:visibility="gone"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="#00000000"
            android:cacheColorHint="#00000000"
            android:horizontalSpacing="@dimen/gallery_gridview_space"
            android:verticalSpacing="@dimen/gallery_gridview_space"
            android:numColumns="@integer/gallery_gridview_numcolumns"/>
        <RelativeLayout
            android:id="@+id/picture_nothing"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/picture_nothing_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/selector_gallery_search_icon"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:textSize="25sp"
                android:textColor="#aaaaaa"
                android:id="@+id/picture_nothing_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/picture_nothing"
                android:layout_below="@+id/picture_nothing_search"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/picture_detailed"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/picture_detailed_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/picture_detailed_rotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/selector_rotate_image"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"/>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/picture_detailed_info"
                android:background="@drawable/shape_gallery_detailed_background"
                android:padding="5dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#ffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/picture_detailed_filename"/>
                    <TextView
                        android:textColor="#ffffff"
                        android:id="@+id/picture_detailed_filename"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#ffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/picture_detailed_capturetime"/>
                    <TextView
                        android:textColor="#ffffff"
                        android:id="@+id/picture_detailed_capturetime"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="text"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#ffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/picture_detailed_resolution"/>
                    <TextView
                        android:textColor="#ffffff"
                        android:id="@+id/picture_detailed_resolution"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="text"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#ffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/picture_detailed_filesize"/>
                    <TextView
                        android:textColor="#ffffff"
                        android:id="@+id/picture_detailed_filesize"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="text"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#ffffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/picture_detailed_storage"/>
                    <TextView
                        android:textColor="#ffffff"
                        android:id="@+id/picture_detailed_storage"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
